# GreenScape

./: .gitignore  1_INTRODUCTION.py  Data Quality Report.docx  README.md  SECURITY.md  Yuliia's Unit Test.py  businnesAI.md  df_for_test.csv  pyproject.toml  requirements.txt  roadmapInfo.md
EDA/Collin/: Collin's Datasets.md  Data Quality Report.ipynb  Green Index and Economic Segregation.ipynb
EDA/Collin/Analysis/: EDA.py  Green.py  Quality Assessment.ipynb  Segregation.ipynb
EDA/Collin/Datasets/: Income.csv
EDA/Collin/Merging/: Merge.ipynb
EDA/Collin/Modelling/: Linear Regression.py  Random Forest.ipynb
EDA/Kacper/: Kacper's Datasets.md  Kacper_GreenScore_DataQualityReport.docx  dataSources.md  greenlivability_final.csv
EDA/Matyas/: Matyas' Datasets.md  breda_emissions_excel_modified.xlsx  conclusion.py  emissions_randomforests.ipynb  ethics.py  matyasEDA.ipynb
EDA/Simona/: Properties - Breda.csv  Simona's Datasets.md  breda_population.csv  deda_framework.md  livability3.0_EDA.ipynb  livability3.0_inverted.csv  main_simona.ipynb  preprocessing_datasets.ipynb
EDA/Yuliia/: Data Quality Report.docx  EDA.ipynb  Legal&Ethical part - ALTAI framework.docx  Yuliia's Datasets.md  public_safety_final.csv
ETHICS/: LegalEthics_Final.docx  altai.md
Pages/: 2_EDA.py
Pages/UnitTests_Kacper/: MachineLearning.py  Map.py  testML.py  testMap.py
Pages/UnitTests_Matyas/: ethics_test.py
Streamlit/: Introduction.py
Streamlit/Pages/: 2_EDA.py
src/: 1INTRODUCTION.py
src/docs/: 1INTRODUCTION.rst  conf.py
src/pages/: 2EDA.py  3EDAMAP.py  4ETHICS.py  5ML.py
(+81 files in other folders)
