[tool.poetry]
name = "greenscape"
version = "0.1.0"
description = ""
authors = ["Simona Dimitrova <222667@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
plotly = "^5.14.1"
dash = "^2.10.2"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
