[tool.poetry]
name = "greenscape"
version = "0.1.0"
description = ""
authors = ["Simona Dimitrova <222667@buas.nl>", "Yuliia Bobrovytska <226038@buas.nl>", "Kacper Janczyk <220646@buas.nl>", "Mátyás Tatár <223073@buas.nl>", "Collin Limoncelli-Buyskes <223661@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
plotly = "^5.14.1"
dash = "^2.10.2"
pandas = "^2.0.2"
sklearn = "^0.0.post5"
sphinx = "^7.0.1"
flake8 = "^6.0.0"
black = "^23.3.0"
folium = "^0.14.0"
scikit_learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
